Prevent tabs from being unpleasantly squished

--- a/browser/src/styles/base.scss
+++ b/browser/src/styles/base.scss
@@ -60,7 +60,7 @@ body {
 .ReactTabs__TabList {
   position: fixed;
   width: 100%;
-  height: 45px;
+  height: 50px;
   bottom: 0;
   margin-bottom: -5px !important;
   padding: 1em;
@@ -81,6 +81,6 @@ body {
 .ReactTabs__TabPanel {
   overflow-y: auto;
   overflow-x: hidden;
-  height: calc(100% - 45px - 2.5em);
-  min-height: calc(100% - 45px - 2.5em);
+  height: calc(100% - 50px - 2.5em);
+  min-height: calc(100% - 50px - 2.5em);
 }
